--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<head>
-<title>Pacific Trails Resort</title>
-<meta charset="utf-8">
-</head>
-<body>
+<html lang="en">
 
+<head>
+    <title>This is a Title!</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <p>Welcome to the first ever lab assignment for web development 1 class.</p>
+    <p>My name is Jin Fitz</p>
 </body>
+
 </html>
